tests/positive/pr115_legacy_local_decl.safe
package pR115_Legacy_Local_Decl

   type counter is range 0 to 10;

   function build returns counter

      current : counter = 0
      current = 1
      return current



