tests/negative/neg_pr1162_removed_declare.safe
package neg_PR1162_Removed_Declare

   function build returns integer

      declare
         temp : integer = 1;
      begin
         return temp;
      end;
